# repo-sync

./: Cargo.toml  README.md
src/: git.rs  main.rs  settings.rs
test/: hello
